fix: api: fix hard encoded host & swagger API
